--- a/vue/Tasks/index.html
+++ b/vue/Tasks/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
   </head>
 
-  <body class="hold-transition skin-blue sidebar-mini">
+  <!--<body class="hold-transition skin-blue sidebar-mini">-->
     <div id="app"></div>
     <!-- jQuery 3 -->
     <script src="./static/js/jquery.min.js"></script>
